fixed some dark mode inconsistancies

--- a/css.css
+++ b/css.css
@@ -112,7 +112,7 @@ h1{
     user-select: none;
   }
   .header .menu-icon .navicon {
-    background: #333;
+    background: rgb(126, 126, 126);
     display: block;
     height: 2px;
     position: relative;
@@ -121,7 +121,7 @@ h1{
   }
   .header .menu-icon .navicon:before,
   .header .menu-icon .navicon:after {
-    background: #333;
+    background: rgb(126, 126, 126);
     content: '';
     display: block;
     height: 100%;
